# TX-Flair

./: Rapport.odt  tx
flair-bin/: Version
flair-bin/.svn/: wc.db
flair-bin/models/: city_tile.xml  scene.dtd
flair-bin/tools/scripts/: dualshock3.xml  dualshock3_local_bt.sh  dualshock3_local_usb.sh  mavplanner_gcs_launch.sh
flair-bin/tools/x86_64/unix/: MavPlanner  dbt2csv  dualshock3  flairgcs
flair-dev/.svn/: wc.db
flair-dev/cmake-modules/: ArchDir.cmake  FindXenomai.cmake  svn_revision.cmake.in
flair-dev/doc/Flair/: _afro_bldc_8h.html  _afro_bldc_8h_source.html  _ahrs_8h.html  _ahrs_8h_source.html  _ahrs_complementary_filter_8h.html  _ahrs_complementary_filter_8h_source.html  _ahrs_data_8h.html  _ahrs_data_8h_source.html  _ahrs_kalman_8h.html  _ahrs_kalman_8h_source.html  _battery_monitor_8h.html  _battery_monitor_8h_source.html  _bl_ctrl_v2_8h.html  _bl_ctrl_v2_8h_source.html  _bl_ctrl_v2__x4__speed_8h_source.html  _blade_8h_source.html  _bldc_8h.html  _bldc_8h_source.html  _box_8h.html  _box_8h_source.html  _butterworth_low_pass_8h.html  _butterworth_low_pass_8h_source.html  _camera_8h.html  _camera_8h_source.html  _castle_8h_source.html  _check_box_8h.html  _check_box_8h_source.html  _combo_box_8h.html  _combo_box_8h_source.html  _condition_variable_8h.html  _condition_variable_8h_source.html  _connected_socket_8h.html  _connected_socket_8h_source.html  _control_law_8h.html  _control_law_8h_source.html  _controller_8h_source.html  _data_plot1_d_8h.html  _data_plot1_d_8h_source.html  _data_plot2_d_8h.html  _data_plot2_d_8h_source.html  (+702 more)
flair-dev/doc/Flair/search/: all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_6.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  enums_1.js  enums_2.js  enums_3.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_11.js  (+66 more)
flair-dev/include/FlairCore/: DataPlot2D.h  GridLayout.h  I2cPort.h  IODevice.h  Map.h  Object.h  OneAxisRotation.h  RTDM_I2cPort.h  RangeFinderPlot.h  SendData.h  SharedMem.h  TextEdit.h  Vector3DSpinBox.h  cvmatrix_descriptor.h  io_data.h
flair-dev/include/FlairFilter/: AhrsKalman.h  ButterworthLowPass.h  SimuAhrs.h  TrajectoryGenerator1D.h  TrajectoryGenerator2DLine.h  TrajectoryGenerator2DSquare.h  TrajectoryGenerator2DSquare.h~
flair-dev/include/FlairSensorActuator/: Bldc.h  Camera.h  Controller.h  EmulatedController.h  Gx3_25_imu.h  SimuCamera.h  UsRangeFinder.h
flair-dev/include/FlairSimulator/: Castle.h  Man.h  Model.h  SimuUsGL.h  VisualizationCamera.h  X4.h
flair-dev/scripts/: LICENSE-header.txt  cmake_codeblocks.sh  flair_compile_all.sh  flair_format_dir.sh  update-license.sed
flair-hds/.svn/: wc.db
flair-hds/dev/include/FlairArdrone2/: ArDrone2Bldc.h  ArDrone2CamV.h  ArDrone2Gpio.h
flair-hds/dev/include/FlairBebop/: Bebop.h  BebopBldc.h
flair-hds/dev/include/VisionFilter/: OpticalFlow.h  OpticalFlowData.h
flair-hds/dev/include/dspcv_gpp/: dspcv_gpp.h
flair-hds/src/demos/ApriltagFollower/simulator/: CMakeLists.txt
flair-hds/src/demos/ApriltagFollower/simulator/src/: main.cpp
flair-hds/src/lib/FlairArdrone2/: CMakeLists.txt
flair-hds/src/lib/FlairBebop/: CMakeLists.txt
flair-hds/src/lib/FlairBebop/src/: Bebop.h  BebopBldc.cpp  BebopBldc.h  I2Cdev.h  MPU6050.cpp  constructor.cpp
flair-hds/src/lib/VisionFilter/: CMakeLists.txt
flair-src/: ReleaseNotes
flair-src/.svn/: wc.db
flair-src/demos/HelloWorld/: CMakeLists.txt
flair-src/demos/LineFollower/simulator/: CMakeLists.txt
flair-src/demos/LineFollower/simulator/build_arm/: CMakeCache.txt  LineFollower_simulator.cbp  Makefile  cmake_install.cmake
flair-src/demos/LineFollower/simulator/build_x86_64/: CMakeCache.txt  LineFollower_simulator.cbp  Makefile  cmake_install.cmake
flair-src/demos/LineFollower/simulator/src/: main.cpp
flair-src/demos/LineFollower/simulator/src/configs_20170511_0031_FlairGCS/: simulator.xml
flair-src/demos/Sinus/: CMakeLists.txt
flair-src/demos/SquareFollowerBak2/uav/: CMakeLists.txt
flair-src/demos/SquareFollowerBak2/uav/build_arm/: Makefile  cmake_install.cmake
flair-src/demos/SquareFollowerBak2/uav/build_x86_64/: CMakeCache.txt  Makefile
flair-src/demos/SquareFollowerBak2/uav/src/: SquareFollower.cpp  SquareFollower.cpp~  SquareFollower.h  SquareFollower.h~
flair-src/lib/FlairCore/rt/: CMakeLists.txt
flair-src/lib/FlairFilter/: TrajectoryGenerator2DCircle_impl.cpp  TrajectoryGenerator2DCircle_impl.cpp~
flair-src/lib/FlairSensorActuator/: CMakeLists.txt
flair-src/lib/FlairSimulator/: CMakeLists.txt
flair-src/lib/FlairSimulator/build_arm/: CMakeCache.txt  FlairSimulator.cbp  Makefile  cmake_install.cmake  install_manifest.txt
flair-src/lib/FlairSimulator/build_arm/no_gl/: FlairSimulator_nogl.cbp  Makefile  cmake_install.cmake
flair-src/lib/FlairSimulator/build_x86_64/: CMakeCache.txt  FlairSimulator.cbp  Makefile  cmake_install.cmake  install_manifest.txt
flair-src/lib/FlairSimulator/build_x86_64/gl/: FlairSimulator_gl.cbp  Makefile  cmake_install.cmake
flair-src/lib/FlairSimulator/build_x86_64/no_gl/: FlairSimulator_nogl.cbp  Makefile  cmake_install.cmake
flair-src/lib/FlairSimulator/src/: Blade.h  FixedCamera.cpp  GenericObject.cpp  Gui_impl.cpp  Man.cpp~  MeshSceneNode.cpp  Parser.cpp  SensorGL.cpp  SimuLaserGL.cpp  SimuLaserGL.h  Simulator_impl.cpp  X8.h
flair-src/lib/FlairSimulator/src/unexported/: Gui_impl.h  compile_info.h
flair-src/tools/Dbt2csv/: CMakeLists.txt
flair-src/tools/Dbt2csv/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  dbt2csv.cbp
flair-src/tools/Dbt2csv/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  dbt2csv.cbp  install_manifest.txt
flair-src/tools/Dbt2csv/build_x86_64/__/FlairGCS/src/: moc_file_ui.cxx  moc_file_ui.cxx_parameters
flair-src/tools/Dbt2csv/src/unexported/: compile_info.h
(+591 files in other folders)
