PROJECT(FlairCore_rt)

find_package(Xenomai REQUIRED)
ADD_DEFINITIONS(${XENOMAI_DEFINITIONS})

INCLUDE_DIRECTORIES(
	${XENOMAI_INCLUDE_DIR}
)

ADD_LIBRARY(${PROJECT_NAME}
	${FLAIRCORE_SRC}
)

INSTALL(TARGETS ${PROJECT_NAME}
	LIBRARY DESTINATION $ENV{FLAIR_ROOT}/flair-bin/lib/${ARCH_DIR}
	ARCHIVE DESTINATION $ENV{FLAIR_ROOT}/flair-bin/lib/${ARCH_DIR}
)

FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/../src/*.h")
INSTALL(FILES ${files} DESTINATION $ENV{FLAIR_ROOT}/flair-dev/include/FlairCore)
